# palantir

./: Cargo.toml  README.md  flake.nix  module.nix  overlay.nix  package.nix  palantir.service
.github/workflows/: nix.yaml  release.yml  rust.yml
benches/: iai.rs
src/: data.rs  docker.rs  heim.rs  lib.rs  main.rs  nvidia.rs  power.rs  sensors.rs  zfs.rs
src/disk/: mod.rs  zfs.rs
src/gpu/: mod.rs  nvidia.rs
src/linux/: hwmon.rs  mod.rs  power.rs  proc.rs  sensors.rs
src/linux/disk/: mod.rs  zfs.rs
src/linux/gpu/: mod.rs  nvidia.rs
src/sys/: mod.rs
src/win/: cpu.rs  mod.rs  reg.rs  wmi.rs
