[package]
name = "palantir"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2021"

[dependencies]
color-eyre = "0.6.1"
warp = "0.3.2"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
ctrlc = { version = "3.2.2", features = ["termination"] }
dotenvy = "0.15.7"
regex = { version = "1.5.6", default-features = false, features = ["std"] }
once_cell = "1.12.0"
hostname = "0.3.1"
libc = "0.2.126"
ahash = "0.7.6"
bollard = "0.13.0"
futures-util = "0.3.21"
libmdns = "0.7.0"
tracing = "0.1.35"
tracing-subscriber = "0.3.11"
nvml-wrapper = "0.8.0"
if-addrs = "0.7.0"
sysconf = "0.3.4"
thiserror = "1.0.40"
clap = { version = "4.2.7", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
serde = { version = "1.0.163", features = ["derive"] }
sysinfo = { version = "0.29.0" }
winapi = { version = "0.3.9", features = ["sysinfoapi", "processthreadsapi", "powerbase", "minwindef", "winnt", "winbase", "winerror", "impl-default"] }
wmi = { version = "0.13.0" }
winreg = { version = "0.50.0", features = ["serialization-serde"] }
os-thread-local = "0.1.3"

[dev-dependencies]
iai = "0.1.1"

[[bench]]
name = "iai"
harness = false

[profile.release]
lto = true
