[package]
name = "palantir"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2021"
rust-version = "1.70.0"

[dependencies]
color-eyre = "0.6.2"
warp = "0.3.6"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
ctrlc = { version = "3.4.2", features = ["termination"] }
dotenvy = "0.15.7"
regex = { version = "1.10.2", default-features = false, features = ["std"] }
once_cell = "1.19.0"
hostname = "0.3.1"
libc = "0.2.151"
ahash = "0.8.7"
bollard = "0.15.0"
futures-util = "0.3.30"
libmdns = "0.7.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
nvml-wrapper = "0.9.0"
if-addrs = "0.11.0"
sysconf = "0.3.4"
thiserror = "1.0.56"
clap = { version = "4.4.13", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
serde = { version = "1.0.195", features = ["derive"] }
sysinfo = { version = "0.30.5" }
winapi = { version = "0.3.9", features = ["sysinfoapi", "processthreadsapi", "powerbase", "minwindef", "winnt", "winbase", "winerror", "impl-default"] }
wmi = { version = "0.13.1" }
winreg = { version = "0.52.0", features = ["serialization-serde"] }
os-thread-local = "0.1.3"

[dev-dependencies]
iai = "0.1.1"

[[bench]]
name = "iai"
harness = false

[profile.release]
lto = true
