[package]
name = "palantir"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2021"
rust-version = "1.70.0"

[dependencies]
color-eyre = "0.6.3"
warp = "0.3.7"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
ctrlc = { version = "3.4.4", features = ["termination"] }
dotenvy = "0.15.7"
regex = { version = "1.10.4", default-features = false, features = ["std"] }
once_cell = "1.19.0"
hostname = "0.4.0"
libc = "0.2.153"
ahash = "0.8.11"
bollard = "0.16.1"
futures-util = "0.3.30"
libmdns = "0.8.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
nvml-wrapper = "0.10.0"
if-addrs = "0.12.0"
sysconf = "0.3.4"
thiserror = "1.0.58"
clap = { version = "4.4.18", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
serde = { version = "1.0.197", features = ["derive"] }
sysinfo = { version = "0.30.8" }
winapi = { version = "0.3.9", features = ["sysinfoapi", "processthreadsapi", "powerbase", "minwindef", "winnt", "winbase", "winerror", "impl-default"] }
wmi = { version = "0.13.3" }
winreg = { version = "0.52.0", features = ["serialization-serde"] }
os-thread-local = "0.1.3"

[profile.release]
lto = true
